# protobuf_transitive_dependencies

./: .gitignore  MODULE.bazel  WORKSPACE
example/: BUILD.bazel  dependency.proto  example.proto  protobuf_test.py
