"Bazel dependencies"

module(name = "protobuf_transitive_dependencies")

bazel_dep(name = "aspect_bazel_lib", version = "2.7.9")
bazel_dep(name = "rules_python", version = "0.32.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0-alpha2")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.0-alpha2")
bazel_dep(name = "protobuf", version = "21.7")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11")

register_toolchains(
    "@python_3_11//:all",
)
